feat: connect the whole UI to the Python API
